--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,17 @@
-# Logs
-logs
-*.log
+.DS_Store
+node_modules/
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
-.DS_Store
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
